# Argus

./: .env.example  Makefile  README.md  pyproject.toml
.github/workflows/: daily_digest.yml  test.yml
argus/: __init__.py  runner.py
argus/config/: settings.py
argus/delivery/: email_delivery.py  git_delivery.py  slack_delivery.py
argus/fetchers/: arxiv_fetcher.py  base.py  huggingface_fetcher.py  reddit_fetcher.py  rss_fetcher.py  semantic_scholar_fetcher.py
argus/pipeline/: dedup.py  enricher.py  filter.py  llm.py  models.py  renderer.py  summarizer.py
config/: rss_feeds.yaml  search_terms.yaml  sentinel.yaml
data/: seen_ids.json
digests/: 2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-03-24.md  2026-03-25.md  2026-03-26.md  2026-03-27.md  2026-03-28.md  2026-03-29.md  2026-03-30.md  2026-03-31.md  2026-04-01.md  2026-04-02.md  2026-04-03.md  2026-04-04.md  2026-04-05.md  2026-04-06.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-18.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-27.md  2026-04-28.md  2026-04-29.md  (+6 more)
scripts/: fetch_test.py
templates/: digest.md.jinja2
tests/: test_dedup.py  test_models.py
